fixed extra spacing on right side of search field so X button looks more normal

--- a/fuel/modules/fuel/assets/css/fuel.css
+++ b/fuel/modules/fuel/assets/css/fuel.css
@@ -511,7 +511,7 @@ a#multi_delete { display: block; }
 .adv_search .label { width: 100px; }
 .adv_search input[type="text"] { max-width: 217px; }
 .search_input { position: relative; }
-#search_term { padding-right: 15px; }
+#search_term.advanced { padding-right: 15px; }
 .search_input #adv-search-btn { position: absolute; right: 4px; top: 5px; padding-top: 5px; height: 10px; }
 
 /* other items */
